# nessemble-rs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN.md  README.md  RELEASING.md
.changeset/: README.md  add_claude_code_stop_hook_that_runs_the_a5844184.md  assembler-icon-toolbar.md  cdl-coverage-core.md  cdl-coverage-plan.md  ci-changeset-gate.md  clap-argument-parsing.md  cli-format-command.md  cli-formatter-case.md  cli-formatter-docs.md  cli-formatter-plan.md  cli-formatter-rules-config.md  codemirror-editor.md  coverage-command.md  coverage-resolved-paths.md  coverage-scripts.md  docker-image-ghcr.md  docs-extensionless-urls.md  docs-syntax-interactive-examples.md  editor-format-on-save.md  fix-docker-build-rust-version.md  fix-release-dockerbuild-artifact.md  format-align-continuations.md  format-anon-label-and-indent-directives.md  idiomatic-followups.md  ines-header-extensions.md  line-continuation.md  lint-lsp-diagnostics.md  lint-rules-plan.md  lint-subcommand.md  lit-conversion-plan.md  llms-txt-docs-index.md  lsp-include-graph-cache.md  macro-scripting-maintenance.md  nes2-header.md  pages-deploy-on-release.md  pages-release-app-token.md  phase-1-instruction-encoding.md  phase-2-ines-directive-dedup.md  phase-3-conditional-stack.md  (+13 more)
.claude/: README.md  settings.json
.claude/hooks/: stop-ci-checks.sh
.github/: pull_request_template.md  release-body.md  release.yml
.github/workflows/: ci.yml  pages.yml  release.yml  tag.yml  version.yml
crates/nessemble-cli/: Cargo.toml
crates/nessemble-cli/src/: config.rs  coverage.rs  custom.rs  format.rs  home.rs  init.rs  lint.rs  lsp.rs  main.rs  rc.rs  reference.rs  scripts.rs  usage.rs
crates/nessemble-cli/src/data/scripts/: ease.rhai  scripts.txt
crates/nessemble-cli/tests/: cli.rs
crates/nessemble-core/: Cargo.toml
crates/nessemble-core/src/: assemble.rs  ast.rs  coverage.rs  lexer.rs  lib.rs  parse.rs  preprocess.rs  tooling.rs
crates/nessemble-core/tests/: corpus.rs  ines_header.rs  nes2_header.rs  phase.rs  relative_paths.rs
crates/nessemble-i18n/: Cargo.toml  README.md
crates/nessemble-i18n/locales/: en-US.ftl
crates/nessemble-i18n/src/: lib.rs
crates/nessemble-isa/: Cargo.toml  build.rs
crates/nessemble-isa/src/: lib.rs
crates/nessemble-lsp/: Cargo.toml
crates/nessemble-lsp/src/: lib.rs
crates/nessemble-media/: Cargo.toml
crates/nessemble-media/src/: color.rs  font.chr  lib.rs  png.rs  rle.rs  wav.rs
crates/nessemble-rc/: Cargo.toml
crates/nessemble-rc/src/: lib.rs
crates/nessemble-script/: Cargo.toml
crates/nessemble-script/src/: coverage.rs  lib.rs
crates/nessemble-wasm/: Cargo.toml
crates/nessemble-wasm/src/: lib.rs
docs/: book.toml
docs/repo/: release-app-setup.md
docs/src/: SUMMARY.md  building.md  contributing.md  editor.md  extending.md  index.md  installation.md  licensing.md  syntax.md  translating.md  upgrading.md  usage.md
docs/theme/: head.hbs
plans/: 001-language-server.md  002-wasm.md  002-workspace-analysis.md  003-ui-syntax-highlighting.md  004-release-orchestration.md  005-formatter.md  006-idiomatic-rust-refactor.md  007-cdl-based-coverage.md  008-linting-rules.md  009-lit-conversion.md
ref/: ines.md  nes2.md
ref/repo/: release-app-setup.md
tests/corpus/examples/custom/: custom.txt
tests/corpus/examples/custom/scripts/: difference.rhai  factorial.rhai  product.rhai  quotient.rhai  sum.rhai
web/: nessemble-assembler.css  nessemble-assembler.js
website/: index.html
website/static/css/: style.css  website.css
website/static/js/: website.js
xtask/: Cargo.toml
xtask/src/: changeset.rs  main.rs
