[workspace]
resolver = "2"
members = [
    "crates/nessemble-isa",
    "crates/nessemble-core",
    "crates/nessemble-media",
    "crates/nessemble-script",
    "crates/nessemble-i18n",
    "crates/nessemble-cli",
    "xtask",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.83"
license = "GPL-3.0-or-later"
repository = "https://github.com/kevinselwyn/nessemble-rs"
authors = ["nessemble-rs contributors"]

# The reference implementation whose behavior we target for parity.
# See PLAN.md.
[workspace.metadata.nessemble]
reference-version = "1.1.1"

[workspace.dependencies]
nessemble-isa = { path = "crates/nessemble-isa", version = "2.0.0" }
nessemble-core = { path = "crates/nessemble-core", version = "2.0.0" }
nessemble-media = { path = "crates/nessemble-media", version = "2.0.0" }
nessemble-script = { path = "crates/nessemble-script", version = "2.0.0" }
nessemble-i18n = { path = "crates/nessemble-i18n", version = "2.0.0" }
clap = { version = "=4.5.23", features = ["derive"] }

[profile.release]
lto = true
strip = true
