[workspace]
resolver = "2"
members = [
    "crates/nessemble-isa",
    "crates/nessemble-core",
    "crates/nessemble-media",
    "crates/nessemble-script",
    "crates/nessemble-i18n",
    "crates/nessemble-lsp",
    "crates/nessemble-wasm",
    "crates/nessemble-cli",
    "xtask",
]

[workspace.package]
version = "2.13.1"
edition = "2021"
rust-version = "1.83"
license = "GPL-3.0-or-later"
repository = "https://github.com/kevinselwyn/nessemble-rs"
authors = ["Kevin Selwyn <kevinselwyn@gmail.com>"]

# The reference implementation whose behavior we target for parity.
# See plans/000-reimplementation.md.
[workspace.metadata.nessemble]
reference-version = "1.1.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Curated pedantic set: enable the group, then allow the lints that are
# inappropriate for a 6502 assembler (intentional narrowing casts on
# byte/address emission, data-table literals) or otherwise not worth chasing.
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
similar_names = "allow"
many_single_char_names = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
nessemble-isa = { path = "crates/nessemble-isa", version = "2.13.1" }
nessemble-core = { path = "crates/nessemble-core", version = "2.13.1" }
nessemble-media = { path = "crates/nessemble-media", version = "2.13.1" }
nessemble-script = { path = "crates/nessemble-script", version = "2.13.1" }
nessemble-i18n = { path = "crates/nessemble-i18n", version = "2.13.1" }
nessemble-lsp = { path = "crates/nessemble-lsp", version = "2.13.1" }
clap = { version = "=4.5.23", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
lto = true
strip = true
