[package]
name = "xtask"
description = "Developer tasks for nessemble-rs (parity harness, oracle fetch)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
