[package]
name = "xtask"
description = "Developer tasks for nessemble-rs (parity harness, oracle fetch)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Only dependency: the shared lexer/classifier, so the docs' static code blocks
# highlight through the exact same tokenizer as the editor and the LSP.
nessemble-core.workspace = true

[lints]
workspace = true
