[package]
name = "nessemble-cli"
description = "Command-line interface for nessemble-rs, a 6502/NES assembler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nessemble"
path = "src/main.rs"

[features]
# Custom pseudo-op scripting (Rhai) is on by default; disabling it drops the
# scripting dependency and makes custom directives report "scripting disabled".
default = ["scripting"]
scripting = ["dep:nessemble-script"]

[dependencies]
nessemble-core.workspace = true
nessemble-isa.workspace = true
nessemble-i18n.workspace = true
nessemble-script = { workspace = true, optional = true }

[lints]
workspace = true

# Debian packaging (`cargo deb`). Installs the CLI to /usr/local/bin to match the
# upstream v1.1.1 `.deb` layout.
[package.metadata.deb]
name = "nessemble"
maintainer = "Kevin Selwyn <kevinselwyn@gmail.com>"
copyright = "2017 Kevin Selwyn"
license-file = ["../../COPYING", "0"]
extended-description = "A 6502 assembler for the Nintendo Entertainment System."
section = "devel"
priority = "optional"
assets = [["target/release/nessemble", "usr/local/bin/", "755"]]

# Windows MSI packaging (`cargo wix`). The .wxs template is generated in CI with
# `cargo wix init`; this records the product identity.
[package.metadata.wix]
name = "nessemble"

