[package]
name = "nessemble-cli"
description = "Command-line interface for nessemble-rs, a 6502/NES assembler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nessemble"
path = "src/main.rs"

[features]
# Custom pseudo-op scripting (Rhai) and the language server are on by default;
# disabling a feature drops its dependency. Without `scripting`, custom
# directives report "scripting disabled"; without `lsp`, `nessemble lsp` reports
# that the build lacks LSP support.
default = ["scripting", "lsp"]
scripting = ["dep:nessemble-script"]
lsp = ["dep:nessemble-lsp"]

[dependencies]
clap.workspace = true
nessemble-core.workspace = true
nessemble-isa.workspace = true
nessemble-i18n.workspace = true
nessemble-script = { workspace = true, optional = true }
nessemble-lsp = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

# Debian packaging (`cargo deb`). Installs the CLI to /usr/local/bin to match the
# upstream v1.1.1 `.deb` layout.
[package.metadata.deb]
name = "nessemble"
maintainer = "Kevin Selwyn <kevinselwyn@gmail.com>"
copyright = "2017-2026 Kevin Selwyn"
license-file = ["../../COPYING", "0"]
extended-description = "A 6502 assembler for the Nintendo Entertainment System."
section = "devel"
priority = "optional"
assets = [["target/release/nessemble", "usr/local/bin/", "755"]]

# Windows MSI packaging (`cargo wix`). The .wxs template is generated in CI with
# `cargo wix init`; this records the product identity.
[package.metadata.wix]
name = "nessemble"

