[package]
name = "nessemble-cli"
description = "Command-line interface for nessemble-rs, a 6502/NES assembler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nessemble"
path = "src/main.rs"

[features]
# Custom pseudo-op scripting (Rhai) and the language server are on by default;
# disabling a feature drops its dependency. Without `scripting`, custom
# directives report "scripting disabled"; without `lsp`, `nessemble lsp` reports
# that the build lacks LSP support.
default = ["scripting", "lsp", "coverage"]
scripting = ["dep:nessemble-script"]
lsp = ["dep:nessemble-lsp"]
# Rhai script coverage for `nessemble coverage --scripts`. Requires `scripting`;
# turns on the script host's `coverage` feature (Rhai debugger + AST walk). On by
# default so `--scripts` works out of the box; the instrumented engine is built
# only when `--scripts` is passed, so ordinary runs pay nothing at runtime.
coverage = ["scripting", "nessemble-script/coverage"]

[dependencies]
clap.workspace = true
nessemble-core.workspace = true
nessemble-isa.workspace = true
nessemble-i18n.workspace = true
nessemble-rc.workspace = true
nessemble-script = { workspace = true, optional = true }
nessemble-lsp = { workspace = true, optional = true }

[lints]
workspace = true

# Debian packaging (`cargo deb`). Installs the CLI to /usr/local/bin to match the
# upstream v1.1.1 `.deb` layout.
[package.metadata.deb]
name = "nessemble"
maintainer = "Kevin Selwyn <kevinselwyn@gmail.com>"
copyright = "2017-2026 Kevin Selwyn"
license-file = ["../../COPYING", "0"]
extended-description = "A 6502 assembler for the Nintendo Entertainment System."
section = "devel"
priority = "optional"
assets = [["target/release/nessemble", "usr/local/bin/", "755"]]

# Windows MSI packaging (`cargo wix`). The .wxs template is generated in CI with
# `cargo wix init`; this records the product identity.
[package.metadata.wix]
name = "nessemble"

