[package]
name = "nessemble-core"
description = "Core 6502/NES assembler (lexer, parser, assembler) for nessemble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nessemble-isa.workspace = true

[lints.rust]
unsafe_code = "forbid"
