[package]
name = "nessemble-core"
description = "Core 6502/NES assembler (lexer, parser, assembler) for nessemble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nessemble-isa.workspace = true
nessemble-media.workspace = true
nessemble-i18n.workspace = true

[dev-dependencies]
# Parses the hand-rolled JSON coverage report in tests to assert it is valid.
serde_json.workspace = true

[lints]
workspace = true
