[package]
name = "nessemble-i18n"
description = "Internationalization (Project Fluent) for nessemble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fluent-bundle = "0.15"
unic-langid = "0.9"

[lints.rust]
unsafe_code = "forbid"
