[package]
name = "nessemble-lsp"
description = "Language Server Protocol implementation for nessemble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"

[lints]
workspace = true
