[package]
name = "nessemble-rc"
description = "`.nessemblerc` project configuration for the nessemble formatter and linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nessemble-core.workspace = true
serde.workspace = true
serde_json.workspace = true
regex-lite.workspace = true

[lints]
workspace = true
