[package]
name = "nessemble-script"
description = "Custom pseudo-op scripting host (Rhai) for nessemble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nessemble-media.workspace = true
rhai = { version = "1", default-features = false, features = ["std"] }
rhai-fs = { version = "0.1.5", default-features = false }

[dev-dependencies]
# Encodes small PNGs for the `decode_png` tests.
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
